# py-caen-felib

./: .gitlab-ci.yml  CHANGELOG  PYCHANGELOG  README.md  py-caen-felib.pyproj  pyproject.toml
doc/: CHANGELOG.md  INTRODUCTION.md
examples/: README.md  demo.ipynb  dig1_demo_dpp.py  dig1_demo_scope.py  dig2_demo_dpppsd.py  dig2_demo_scope.py
src/caen_felib/: __init__.py  _cache.py  _utils.py  device.py  dig1_types.py  dig2_types.py  error.py  lib.py  types.py  utils.py
src/pyfelib/: __init__.py  device.py  error.py  lib.py
tests/: demo.ipynb  demo.py
